--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -10,11 +10,11 @@
     display: inline-block;
 }
 
-.listHistory {
+/* .listHistory {
     border-collapse: collapse;
     padding: 10px;
     border: 1px solid #2a2a2a;
-}
+} */
 
 .type,
 .amount,
@@ -24,6 +24,7 @@
     font-size: small;
     margin-top: 20px;
     text-align: center;
+    
 
 }
 
@@ -33,4 +34,6 @@
     font-size: 12pt;
     position: relative;
     align-content: space-between;
+    
+
 }
