--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -7,6 +7,7 @@
     margin: 20px;
     display: block;
     margin: 0;
+    margin-bottom: 20px;
     border: 2px solid black;
     border-radius: 4px;
     padding-top: 16px;
@@ -54,21 +55,20 @@
 
     text-align: center;
     border: 1px solid #bbb;
-    /* padding: 0 2px 0 4px; */
+    padding: 9px;
 }
 
 .UserFollowers,
 .UserViews,
 .UserLikes {
-    /* display: block; */
     display: flex;
     flex-direction: column;
     text-align: center;
     width: 70px;
     padding: 20px 0 20px;
     list-style: none;
-    font-size: medium;
-    line-height: 16px;
+    font-size: 14px;
+    line-height: 1.33;
     font-weight: 400;
     letter-spacing: 0.25px;
     text-align: center;
@@ -89,7 +89,7 @@
     margin: 0 auto;
     border: 1px solid black;
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    width: 80px;
+    height: 80px;
 
 }
